--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.15"
+    "@varlet/ui": "3.3.6",
+    "vue": "^3.4.15",
+    "vue-router": "4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.6.2",
